--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="mainColor">#ff0e72a6</color>
+    <color name="darker_mainColor">	#ff084a6e</color>
+    <color name="grayformainScreen">#FFF5F6F8</color>
 </resources>
